--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "vuex-persistedstate": "^4.1.0"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.1",
